--- a/src/style.css
+++ b/src/style.css
@@ -173,18 +173,19 @@ a {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #333;
+    background: linear-gradient(to bottom, #f4e8e8 0%, #C1C2C4 90%);
     min-width: 160px;
-    z-index: 1;
+    z-index: 2;
 }
 .dropdown-cat a {
     display: block;
     padding: 10px;
-    color: white;
+    color:#000000;
     text-decoration: none;
 }
 .dropdown-cat a:hover {
-    background-color: #555;
+    background-color: #9d9696;
+    font-family:"Poppins";
 }
 .dropdown:hover .dropdown-cat {
     display: block;
